--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -22,12 +22,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">The Game</a>
+          <a class="navbar-brand" href="/">ACORE</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/surveys/questions/">Survey</a></li>
-            <li><a href="/surveys/results/">Results</a></li>
             <li><a href="/acore">About</a></li>
           </ul>
         </div>
