--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -206,43 +206,66 @@
             
             var emotionalTable = [
                 ['{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/distress2.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}'],
-                ['{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/sad1.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}'],
-                ['{% static "surveys/fear2.jpg" %}', '{% static "surveys/fear1.jpg" %}', '{% static "surveys/hope1.jpg" %}', '{% static "surveys/hope3.jpg" %}', '{% static "surveys/hope2.jpg" %}'],
+                ['{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/distress1.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}'],
+                ['{% static "surveys/fear2.jpg" %}', '{% static "surveys/fear1.jpg" %}', '{% static "surveys/normal1.jpg" %}', '{% static "surveys/hope2.jpg" %}', '{% static "surveys/hope3.jpg" %}'],
                 ['{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/happy1.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}'],
                 ['{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/happy3.jpg" %}', '{% static "surveys/TEMP.jpg" %}'], ['{% static "surveys/TEMP.jpg" %}']
             ]
 
             console.log("joy: " + joyEmo + "hopeEmo: " + hopeEmo + "sorrow: " + sorrowEmo + "fear: " + fearEmo);
 
-            var x = 0;
-            var y = 0;
-            var deltaX = hopeEmo - fearEmo;
-            var deltaY = joyEmo - sorrowEmo;
-
-            if(deltaX > 30){
-                x = 4;
-            }else if (deltaX > 0){
-                x = 3;
-            } else if (deltaX == 0){
-                x = 2;
-            }else if (deltaX > -30){
-                x = 1
-            }else{
-                x = 0;
+            var x = 2;
+            var y = 2;
+            //var deltaX = hopeEmo - fearEmo;
+            //var deltaY = joyEmo - sorrowEmo;
+            if ((joyEmo + hopeEmo) > (sorrowEmo + fearEmo)) {
+                if (joyEmo > hopeEmo){
+                if (joyEmo > 0) {
+                    x = 3 
+                    y = 2
+                }
+                else if (joyEmo > 20) {
+                    x = 4
+                    y = 2
+                }
+            }
+            else {
+                if (hopeEmo > 0) {
+                    x = 2
+                    y = 3
+                }
+                else if (hope > 20) {
+                    x = 2
+                    y = 4
+                }
+            }
+            }
+            else {
+                if (sorrowEmo > fearEmo) {
+                    if (sorrowEmo > 0) {
+                        x = 1
+                        y = 2
+                    }
+                    else if (sorrowEmo > 20) {
+                        x = 0
+                        y = 2
+                    }
+                }
+                else {
+                    if (fearEmo > 0) {
+                        x = 2
+                        y = 1
+                    }
+                    else if (fearEmo > 20) {
+                        x = 2 
+                        y = 0
+                    }
+                }
             }
 
-            if(deltaY > 30){
-                y = 4;
-            }else if (deltaY > 0){
-                y = 3;
-            } else if (deltaY == 0){
-                y = 2;
-            }else if (deltaY > -30){
-                y = 1
-            }else{
-                y = 0;
-            }
-            console.log("deltaX:" + deltaX + "deltaY" + deltaY);
+
+          
+           // console.log("deltaX:" + deltaX + "deltaY" + deltaY);
             console.log("x: " + x + " y: " + y + "emTab[x,y]: " + emotionalTable[x][y]);
             return emotionalTable[x][y];
         }
