Changed layout to horizontal

--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -12,7 +12,7 @@
     {% block css %}{% endblock css %}
     {% block js %}{% endblock js %}
 </head>
-<body style='background-color:#eee;'>
+<body >
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
