--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -6,7 +6,7 @@
 {% block title %}ACORE{% endblock title %}
 
 {% block page_content %} 
-    <div style='height:4em; width:100%; margin-bottom:1.5cm; background-color:#eee;'>
+    <div style='height:4em; width:100%; margin-left:15px; margin-right:15px;  margin-bottom: 1cm; background-color:#eee;'>
         <span id='status1' class='game-status'>
             <h4 class='status-text'> Passive Phase </h4> 
         </span>
@@ -21,36 +21,31 @@
         </span>
     </div>
 
-    <div class='col-sm-12' id='central-div'>
-        <div class="col-sm-7" id="npcDiv" style='position:relative'>
-            <div id='newGameDiv' style='display:none'>
-                <div> 
-                    <h2 style='text-align:left'> Game Over! </h2>
-                    <button class='btn btn-danger' id='playAgain' style='float:right;'> Play Again </button>
-                </div>
-                <div class='page-header'></div>
-                <div>
-                    <h2 style='text-align:left'> Ready for the survey? </h2>
-                    <a href='/surveys/questions'> <button class='btn btn-primary' style='float:right'> Survey </button> </a>
-                </div>
+    <div class='col-sm-12' id='npcDiv' style='position:relative;'>
+        <div >
+            <button id="nextStep" class="btn btn-success" style='margin-left:0px' type="button" > Next Step </button>
+            <button id="info" class="btn btn-warning " type="button" > i </button>
+        </div>
+
+        <div id='newGameDiv' style='display:none;'>
+            <div class='col-sm-6'> 
+                <h2 style='text-align:center'> Game Over! </h2>
+                <div style='text-align:center'> <button class='btn btn-danger' id='playAgain' > Play Again </button> </div>
+                <div class='page-header'> </div>
+            </div>
+            <div class='col-sm-6'>
+                <h2 style='text-align:center'> Ready for the survey? </h2>
+                <div style='text-align:center'> <a href='/surveys/questions'> <button class='btn btn-primary'> Survey </button> </a></div>
+                <div class='page-header'> </div>
             </div>
         </div>
-        <div id='referenceDiv' class="col-sm-5" style='height:75vh;'>
-            <div> 
-                <button id="nextStep" class="btn btn-success " type="button" style='position:relative; min-width:100%'> Next Step </button>
-            </div>
-            <div class='page-header' style='margin-top:10px'> </div>
-            <div id='scoreboard' class="col-sm-7" style='padding-left:0px; padding-right:0px;'> </div>
-            <div class="col-sm-5" > 
-                <span class='scoreboard-color-legend' style='background-color:#d9edf7; border-color:#bce8f1;'></span> <p class='one-line'> <strong> &nbsp Waiting </strong> </p> 
-                <span class='scoreboard-color-legend' style='background-color:#fcf8e3; border-color:#faebcc;'></span> <p class='one-line'> <strong> &nbsp Trying to pass </strong> </p> 
-                <span class='scoreboard-color-legend' style='background-color:#dff0d8; border-color:#d6e9c6;'></span> <p class='one-line'> <strong> &nbsp Successfully Passed </strong> </p>
-                <span class='scoreboard-color-legend' style='background-color:#ccc; border-color:#aaa;'></span> <p class='one-line'> <strong> &nbsp Failed to Pass </strong> </p>  
-                <span class='scoreboard-color-legend' style='background-color:#f2dede; border-color:#ebccd1;'></span> <p class='one-line'> <strong> &nbsp Protesting </strong> </p> 
-                <button id='info' type='button' style='margin-left:2em; float:left' class='btn btn-warning info-button'> Info </button>
-            </div>
-        </div>
+
+        
+
     </div>
+
+
+    
 {% endblock page_content %}
 
 
@@ -66,6 +61,20 @@
     dt { 
         float: left; 
         padding: 4px; 
+    }
+
+    .npcHolder{
+        /*TODO change these dimensions to proportions, such that different screen sizes and images can be used*/
+        float:left;
+        width:150px;
+        height:360px;
+        margin-right:20px;
+        position:relative;
+    }
+
+    .npcImage{
+        width:100%;
+        height:auto;
     }
 
     .scoreboard-color-legend{         
@@ -212,8 +221,6 @@
                 ['{% static "surveys/TEMP.jpg" %}', '{% static "surveys/TEMP.jpg" %}', '{% static "surveys/happy3.jpg" %}', '{% static "surveys/TEMP.jpg" %}'], ['{% static "surveys/TEMP.jpg" %}']
             ]
 
-            console.log("joy: " + joyEmo + "hopeEmo: " + hopeEmo + "sorrow: " + sorrowEmo + "fear: " + fearEmo);
-
             var x = 0;
             var y = 0;
             var deltaX = hopeEmo - fearEmo;
@@ -242,8 +249,7 @@
             }else{
                 y = 0;
             }
-            console.log("deltaX:" + deltaX + "deltaY" + deltaY);
-            console.log("x: " + x + " y: " + y + "emTab[x,y]: " + emotionalTable[x][y]);
+
             return emotionalTable[x][y];
         }
 
@@ -354,26 +360,22 @@
                 document.getElementById('nextStep').disabled = false;
 
                 for(var i = 0; i < npcCount; i++){
-                    $("<div id='npcParent" + (i+1) + "' class='col-sm-12 npc-container'> </div>").appendTo("#npcDiv");
+                    $("<div id='npcParent" + (i+1) + "' class='npc-container npcHolder'> </div>").appendTo("#npcDiv");
 
-                    $("<div id='npcChild" + (i+1) + "' class='col-sm-7'></div>").appendTo('#npcParent' + (i+1));
-                    $("<h4 style='text-align:left'><strong>" + nameList[i] +" </strong></h4>").appendTo("#npcChild" + (i+1));
-                    //$("<img id='npcFace"+ nameList[i] + "' src='" + getHighestEmotion(emotionList[i]) + "' border='0' alt='happy' style='width:100%; height:100%;' />").appendTo("#npcChild" + (i+1));
-                    $("<img id='npcFace"+ nameList[i] + "' src='" + getDynamicFace(emotionList[i]) + "' border='0' alt='happy' style='width:100%; height:100%;' />").appendTo("#npcChild" + (i+1));
-                    $("<div id='npcChildBar" + (i+1) + "' class='col-sm-5'> </div>").appendTo("#npcParent" + (i+1));
-                    $("<h4> &nbsp </h4>").appendTo("#npcChildBar" + (i+1));
-                    $("<dl style='width:100%' id='npcChart"+ (i+1) + "' > </dl>").appendTo("#npcChildBar" + (i+1));
-                    $("<dt id='joytext_" + nameList[i] + "'> Joy " + getEmotionPercent(emotionList[i][0]) + "%</dt>").appendTo("#npcChart"+ (i+1));
-                    $("<dd><div id='joybar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][0]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
-                    $("<dt id='hopetext_" + nameList[i] + "'> Hope " + getEmotionPercent(emotionList[i][1]) + "%</dt>").appendTo("#npcChart"+ (i+1));
-                    $("<dd><div id='hopebar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][1]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
-                    $("<dt id='sorrowtext_" + nameList[i] + "'> Sorrow " + getEmotionPercent(emotionList[i][2]) + "%</dt>").appendTo("#npcChart" + (i+1));
-                    $("<dd><div id='sorrowbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][2]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
-                    $("<dt id='feartext_" + nameList[i] + "'> Fear " + getEmotionPercent(emotionList[i][3]) + "%</dt>").appendTo("#npcChart" + (i+1));
-                    $("<dd><div id='fearbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][3]) + "%'> &nbsp </div></dd>").appendTo("#npcChart" + (i+1));
+                    $("<h4 style='text-align:left'><strong>" + nameList[i] +" </strong></h4>").appendTo("#npcParent" + (i+1));
+                    $("<img id='npcFace"+ nameList[i] + "' src='" + getDynamicFace(emotionList[i]) + "' class='npcImage' />").appendTo("#npcParent" + (i+1));
 
-                    $("<div  id='scoreboard_" + (i+1) + "' class='" + getAlertClass(actionList[i]) + "' style='margin:0; text-align:center;'>" + nameList[i] + "</div>").appendTo('#scoreboard');
-                    //$("<span id='scoreboard_" + (i+1) + "' class='" + getLabelClass(actionList[i]) + "'style='margin:0; text-align:center;'>" + nameList[i] + "</span>").appendTo("#scoreboard");
+                    $("<div id='" + nameList[i] + "Bar'> </div>").appendTo("#npcParent" + (i+1));
+                    $("<dl style='width:100%' id='" + nameList[i] + "Chart' > </dl>").appendTo("#" + nameList[i] + "Bar");
+                    $("<dt id='joytext_" + nameList[i] + "'> Joy " + getEmotionPercent(emotionList[i][0]) + "%</dt>").appendTo("#" + nameList[i] + "Chart");
+                    $("<dd><div id='joybar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][0]) + "%'> &nbsp </div></dd>").appendTo("#" + nameList[i] + "Chart");
+                    $("<dt id='hopetext_" + nameList[i] + "'> Hope " + getEmotionPercent(emotionList[i][1]) + "%</dt>").appendTo("#" + nameList[i] + "Chart");
+                    $("<dd><div id='hopebar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][1]) + "%'> &nbsp </div></dd>").appendTo("#" + nameList[i] + "Chart");
+                    $("<dt id='sorrowtext_" + nameList[i] + "'> Sorrow " + getEmotionPercent(emotionList[i][2]) + "%</dt>").appendTo("#" + nameList[i] + "Chart");
+                    $("<dd><div id='sorrowbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][2]) + "%'> &nbsp </div></dd>").appendTo("#" + nameList[i] + "Chart");
+                    $("<dt id='feartext_" + nameList[i] + "'> Fear " + getEmotionPercent(emotionList[i][3]) + "%</dt>").appendTo("#" + nameList[i] + "Chart");
+                    $("<dd><div id='fearbar_" + nameList[i] + "' class='graph_bar neutral_bar' style='width:" + getEmotionPercent(emotionList[i][3]) + "%'> &nbsp </div></dd>").appendTo("#" + nameList[i] + "Chart");
+
                 }
                 if(npcCount == 0){
                     setUpEndGame();                  
@@ -431,7 +433,6 @@
                     for(var i = 0; i < npcCount; i++){
                         document.getElementById('npcFace' + nameList[i]).src = getDynamicFace(emotionList[i]);
 
-                        $('#scoreboard_' + (i+1)).attr('class', getAlertClass(actionList[i]));
                         $('#joytext_' + nameList[i]).text('Joy ' + getEmotionPercent(emotionList[i][0]) + '%');
                         $('#joybar_'+nameList[i]).width(getEmotionPercent(emotionList[i][0]) + '%');
                         $('#hopetext_' + nameList[i]).text('Hope ' + getEmotionPercent(emotionList[i][1]) + '%');
@@ -455,27 +456,44 @@
             for(var i=0; i < passingNPCs.length; i ++){
                 
                 var passingIndex = passingNPCs[i]
-                var movingUp = $('#npcParent'+ (passingIndex + 1));
-                var movingDown = $('#npcParent' + passingIndex);
-                var marginDif = parseInt(movingUp.css('marginTop')) + parseInt(movingDown.css('marginBottom'));
-                var upHeight = movingUp.outerHeight() + marginDif;
-                var downHeight = movingDown.outerHeight() + marginDif;
+                // var movingUp = $('#npcParent'+ (passingIndex + 1));
+                // var movingDown = $('#npcParent' + passingIndex);
+                // var marginDif = parseInt(movingUp.css('marginTop')) + parseInt(movingDown.css('marginBottom'));
+                // var upHeight = movingUp.outerHeight() + marginDif;
+                // var downHeight = movingDown.outerHeight() + marginDif;
+                // $.when(
+                //     movingUp.animate({top: -downHeight}, 750),
+                //     movingDown.animate({top: upHeight},750)).then( 
+                // function(){
+                //     document.getElementById('nextStep').disabled = false;
+                //     movingUp.insertBefore(movingDown);
+                //     movingUp.css('top', '0px');
+                //     movingDown.css('top', '0px');
+                // });
+
+                var movingLeft = $('#npcParent' + (passingIndex + 1));
+                var movingRight = $('#npcParent' + passingIndex);
+
+                var marginDif = parseInt(movingLeft.css('marginLeft')) + parseInt(movingRight.css('marginLeft')); // Likely just 20 pixels
+                var leftWidth = movingLeft.outerWidth() + marginDif;
+                var rightWidth = movingRight.outerWidth() + marginDif; //TODO these numbers are likely static, and don't need to be computed each time
+
+                console.log('leftwidth: ' + leftWidth  + " rightWidth: " + rightWidth);
                 $.when(
-                    movingUp.animate({top: -downHeight}, 750),
-                    movingDown.animate({top: upHeight},750)).then( 
+                    movingLeft.animate({left: -rightWidth}, 750),
+                    movingRight.animate({left: leftWidth}, 750)).then(
                 function(){
                     document.getElementById('nextStep').disabled = false;
-                    movingUp.insertBefore(movingDown);
-                    movingUp.css('top', '0px');
-                    movingDown.css('top', '0px');
+                    movingLeft.insertBefore(movingRight);
+                    movingLeft.css('left', 0);
+                    movingRight.css('left', 0);
                 });
+                
 
                 $('#npcParent'+ (passingIndex+1)).attr('id', 'ptemp');
                 $('#npcParent'+ passingIndex).attr('id', 'npcParent'+ (passingIndex + 1));                                
                 $('#ptemp').attr('id', 'npcParent' + passingIndex);
 
-                $('#scoreboard_' + (passingIndex)).html(nameList[passingIndex-1]);
-                $('#scoreboard_' + (passingIndex + 1)).html(nameList[passingIndex]);
             }
             if(passingNPCs.length == 0){
                 document.getElementById('nextStep').disabled = false;
@@ -484,24 +502,21 @@
 
         function finalUpdate(npcCount){
             /* When it's time for the NPC in first place to receive their item, they are no longer included in teh list of
-            npcs, so they are removed from the layout by a fade out, and all of the NPCs underneath are moved upward to 
+            npcs, so they are removed froim the layout by a fade out, and all of the NPCs underneath are moved upward to 
             take the higher positions.  In the case that the line is now empty, the game over text and button will appear so that
             the user can start a new game. Currently, the new game button doesn't always work, and I have no idea what it's 
             successful execution is dependant on. */
-            var panelHeight = $('#npcParent1').outerHeight();
-            var npcName = document.getElementById('scoreboard_1');
-            npcName.parentNode.removeChild(npcName);
+            var panelWidth = $('#npcParent1').outerWidth(true);
             $.when(
                 $('#npcParent1').animate({opacity: 0}, 750),
-                $('.npc-container').not('#npcParent1').animate({top: -panelHeight}, 750)).then(
+                $('.npc-container').not('#npcParent1').animate({left: -panelWidth}, 750)).then(
             function () {
                 var npcPanel = document.getElementById('npcParent1');
                 npcPanel.parentNode.removeChild(npcPanel);                                    
-                $('.npc-container').css('top', '0px');
+                $('.npc-container').css('left', '0px');
 
                 for(var i = 2; i <=npcCount + 1; i++){
                     $('#npcParent' + i).attr('id', 'npcParent' + (i-1));
-                    $('#scoreboard_' + i).attr('id', 'scoreboard_' + (i-1));
                     document.getElementById('nextStep').disabled = false;
                 }
             });
@@ -529,7 +544,7 @@
             });
             $('#info').click(function(){
                 infoPopup();
-            })
+            });
             $('#playAgain').click(function(){
                 reinitializeNPCs();
             })
