--- a/surveys/static/css/custom.css
+++ b/surveys/static/css/custom.css
@@ -1,4 +1,164 @@
-.line_box {
-	border: solid black 1px;
-	background-color: green;
+dt { 
+        float: left; 
+        padding: 4px; 
+    }
+
+    .npcHolder{
+        /*TODO change these dimensions to proportions, such that different screen sizes and images can be used*/
+        float:left;
+        width:150px;
+        height:360px;
+        margin-right:20px;
+        position:relative;
+    }
+
+    .npcImage{
+        width:100%;
+        height:auto;
+    }
+
+    .scoreboard-color-legend{         
+        border-radius:50%; 
+        border-style:solid; 
+        height:1em; 
+        width:1em; 
+        float:left;
+    }
+
+    .graph_bar {
+        margin-bottom: 10px;
+        color: #fff;
+        text-align: center;
+        border-radius: 2px;
+        height: 30px;
+    }
+
+    .neutral_bar{
+        background: -webkit-gradient(linear, left top, left bottom, from(#afafd3), to(#d4d4d4));
+    }
+
+    .hope_bar {
+        background: -webkit-gradient(linear, left top, left bottom, from(#2b669a), to(#4098e6));
+    }
+    .joy_bar {
+        background: -webkit-gradient(linear, left top, left bottom, from(#3b8f3b), to(#5edf5e));
+    }
+    .fear_bar {
+        background: -webkit-gradient(linear, left top, left bottom, from(#965d0c), to(#e38d13));
+    }
+    .sorrow_bar { 
+        background: -webkit-gradient(linear, left top, left bottom, from(#b92c28), to(#6e1b18));
+    }
+
+    .pass-fail-alert {
+        background-color:#ccc;
+        border-radius:4px;
+        border-width:1px;
+        border-style:solid;
+        border-color:#aaa;
+        display:block;
+        font-family: Helvetica, Arial;
+        margin:0;
+        padding:15px;
+        text-align:center;
+    }
+
+    .game-status{
+        width:25%;
+        height:100%;
+        float:left;
+    }
+
+    .active-status{
+        background-color:#888;
+        border-color:#888;
+        border-style:solid;
+        border-radius:5px;
+    }
+
+    .nonactive-status{
+        background-color:#eee;
+    }
+
+    .status-text{
+        color:#ffffff; 
+        text-align:center;
+        padding-left:0px; 
+        padding-right:0px;
+        padding-top:0.25cm;
+        font-family:Helvetica, Arial;
+    }
+
+    .info-button{
+        margin-left:1em; 
+    }
+
+    .one-line{
+        white-space:nowrap;
+    }
+
+/*    .chatbox {
+        margin-top: 10px;
+        border: 1px solid green;
+        border-radius: 10px;
+        height: 20px;
+        text-align: center;
+    }*/
+
+
+    div.calloutFrame {
+    height: 130px;
+    width: 140px;
+    float: left;
+}
+
+div.callout {
+    background-color: #444;
+    background-image: -moz-linear-gradient(top, #444, #444);
+    position: relative;
+    color: #ccc;
+    padding: 10px;
+    border-radius: 3px;
+    box-shadow: 0px 0px 20px #999;
+    margin: 25px;
+    min-height: 50px;
+    border: 1px solid #333;
+    text-shadow: 0 0 1px #000;
+    height: 80px;
+    
+    /*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
+}
+
+.callout::before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    border: 0.8em solid transparent;
+    position: absolute;
+}
+
+
+
+.callout.top::before {
+    left: 45%;
+    bottom: -20px;
+    border-top: 10px solid #444;
+}
+.passAnimate {
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: slidein;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+
+}
+@-webkit-keyframes slidein {
+  from {
+    margin-bottom: -30px;
+    margin-right: 10px;
+  }
+
+  to {
+    margin-bottom: 50px;
+    margin-right: 30px;
+  }
 }
