--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -6,7 +6,8 @@
     <title>{% block title %}{% endblock title %}</title>
     <link rel="shortcut icon" href='{% static "surveys/favicon.ico" %}' type="image/x-icon">
     <link rel="icon" href='{% static "surveys/favicon.ico" %}' type="image/x-icon">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href='{% static "css/bootstrap.css" %}'>
+    <link rel="stylesheet" href='{% static "css/custom.css" %}'>
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
     {% block css %}{% endblock css %}
